@@ -128,7 +128,7 @@ hcat.bin=/usr/local/hcat/bin/hcat
 
 # By default, the logic to estimate the number of reducers to use for a given job lives in:
 #   org.apache.pig.backend.hadoop.executionengine.mapReduceLayer.InputSizeReducerEstimator
-# This logic can be relaced by implementing the following interface:
+# This logic can be replaced by implementing the following interface:
 #   org.apache.pig.backend.hadoop.executionengine.mapReduceLayer.PigReducerEstimator
 
 # This class will be invoked to estimate the number of reducers to use.
@@ -137,6 +137,24 @@ hcat.bin=/usr/local/hcat/bin/hcat
 # Optionally, you can supply a single String argument to pass to your PigReducerEstimator.
 # pig.exec.reducer.estimator.arg = <somevalue>
 
+#####################################################################
+
+###### Override the default Pig Stats Output Size Reader logic ######
+
+# By default, the size of reducers output is computed as the total size of
+# output files. But since not every storage is file-based, this logic is not
+# always applicable. If that is the case, the logic can be replaced by
+# implementing the following interface:
+#   org.apache.pig.backend.hadoop.executionengine.mapReduceLayer.PigStatsOutputSizeReader
+
+# This class will be invoked to compute the size of reducers output.
+# pig.stats.output.size.reader = <fully qualified class name of a PigStatsOutputSizeReader implementation>
+
+# If you need to register more than one reader, you can register them as a comma
+# separated list. Every reader implements a boolean supports(POStore sto) method.
+# When there are more than one reader, they are consulted in order, and the
+# first one whose supports() method returns true will be used.
+#
 #####################################################################
 
 #pig.load.default.statements=
