@@ -58,6 +58,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-2924: PigStats should not be assuming all Storage classes to be file-based storage (cheolsoo)
+
 PIG-3046: An empty file name in -Dpig.additional.jars throws an error (prkommireddi via cheolsoo)
 
 PIG-2989: Illustrate for Rank Operator (xalan via gates)
